--- a/style.css
+++ b/style.css
@@ -1014,3 +1014,9 @@ ul ul {
    background: #f1f1f1 !important;
    z-index: -1 !important;
 }
+
+@media(max-width: 768px) {
+   .navbar-content {
+      padding-bottom: 0px !important;
+   }
+}
