--- a/style.css
+++ b/style.css
@@ -1736,39 +1736,77 @@ body {
 }
 
 h1 {
-   font-size: 4rem;
+   font-size: 3.2rem;
    margin-bottom: 5rem;
    line-height: 4.8rem;
 }
 
 h2 {
-   font-size: 3rem;
+   font-size: 2.6rem;
    margin-bottom: 4rem;
    line-height: 3.8rem;
 }
 
 h3 {
-   font-size: 2.5rem;
+   font-size: 2.2rem;
    margin-bottom: 3.6rem;
    line-height: 3.35rem;
 }
 
 h4 {
-   font-size: 2.1rem;
+   font-size: 1.85rem;
    margin-bottom: 2.6rem;
    line-height: 2.5rem;
 }
 
 h5 {
-   font-size: 1.78rem;
+   font-size: 1.6rem;
    margin-bottom: 2.25rem;
    line-height: 2.25rem;
 }
 
 h6 {
-   font-size: 1.4rem;
+   font-size: 1.2rem;
    margin-bottom: 2rem;
    line-height: 2rem;
+}
+
+@media(min-width: 769px) {
+   h1 {
+      font-size: 4rem;
+      margin-bottom: 5rem;
+      line-height: 4.8rem;
+   }
+   
+   h2 {
+      font-size: 3rem;
+      margin-bottom: 4rem;
+      line-height: 3.8rem;
+   }
+   
+   h3 {
+      font-size: 2.5rem;
+      margin-bottom: 3.6rem;
+      line-height: 3.35rem;
+   }
+   
+   h4 {
+      font-size: 2.1rem;
+      margin-bottom: 2.6rem;
+      line-height: 2.5rem;
+   }
+   
+   h5 {
+      font-size: 1.78rem;
+      margin-bottom: 2.25rem;
+      line-height: 2.25rem;
+   }
+   
+   h6 {
+      font-size: 1.4rem;
+      margin-bottom: 2rem;
+      line-height: 2rem;
+   }
 }
 
 
@@ -3019,7 +3057,7 @@ code.element::after {
 
 .navbar .navbar-content {
    display: block;
-   padding: 10px 15px
+   padding: 10px 20px
 }
 
 .navbar * {
@@ -3063,7 +3101,6 @@ code.element::after {
 
 .navbar .navbar-content {
    position: relative;
-   padding: 0px;
    margin: 0 auto;
 }
 
@@ -3072,19 +3109,16 @@ code.element::after {
 }
 
 .navbar-left {
-   width: 20%;
+   width: calc(25% - 10px);
    display: inline-block;
-   padding: 15px 0px;
+   height: 100%;
 }
 
 .navbar-right {
    display: inline-flex;
    justify-content: flex-end;
-   float: right;
-   position: absolute;
-   height: 100%;
-   padding: 0;
-   width: 70%;
+   height: 78px;
+   width: calc(75%);
    align-items: center;
 }
 
@@ -9503,6 +9537,10 @@ code.element::after {
 
 #mobileMenu:hover {
    color: var(--primary);
+}
+
+.menu-icon-index:hover {
+   color: var(--white-transparent) !important;
 }
 
 .mobile-menu.unclicked {
