--- a/style.css
+++ b/style.css
@@ -9551,9 +9551,9 @@ code.element::after {
    background: black;
    position: absolute;
    z-index: 500;
-   width: calc(100vw - 36px);
+   width: 100vw;
    max-width: 100vw;
-   right: -9px;
+   right: -45px;
    top: 80px;
 }
 
@@ -9562,7 +9562,8 @@ code.element::after {
    color: white !important;
    background: #363636;
    font-size: 20px;
-   padding: 18px;
+   padding: 18px 0px;
+   text-align: center;
 
 }
 
